--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -14,3 +14,20 @@ article {
   grid-column: 1/1;
   grid-row: auto;
 }
+
+.flex-container {
+  margin-top: 4rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.text-bubble {
+  margin-left: auto;
+  margin-right: 0.5rem;
+  margin-bottom: 1rem;
+}
+.arrow {
+  margin-left: auto;
+  margin-top: auto;
+}
