--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,33 +1,73 @@
 .App {
-  margin: 6rem 1rem 0 1rem;
+  margin: 0rem 1rem 0 1rem;
 }
-article {
+.grid {
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-auto-rows: auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(12, 1fr);
+  height: 100vh;
+}
+
+.register-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+header {
+  grid-column: 1 / 1;
+  grid-row: 4/ 7;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.grid-big {
+  height: 200vh;
   header {
     grid-column: 1 / 1;
-    grid-row: auto;
+    grid-row: 1/ 6;
   }
 }
-.form {
+.form,
+.onboarding-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   grid-column: 1/1;
-  grid-row: auto;
+  grid-row: 5/13;
+}
+.onboarding-start {
+  grid-column: 1/1;
+  grid-row: 7/13;
 }
 
 .flex-container {
   margin-top: 4rem;
-  height: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.text-bubble {
-  margin-left: auto;
-  margin-right: 0.5rem;
-  margin-bottom: 1rem;
-}
-.arrow {
-  margin-left: auto;
-  margin-top: auto;
+.main {
+  header {
+    grid-column: 1 / 1;
+    grid-row: 2/3;
+  }
+  .btns {
+    grid-column: 1/ 1;
+    grid-row: 4 / 6;
+    display: flex;
+    justify-content: space-around;
+    .btn-dark {
+      margin: 0;
+      margin-bottom: auto;
+    }
+  }
+  .playboard {
+    grid-column: 1/1;
+    grid-row: 6 / 11;
+    display: flex;
+    input {
+      margin-top: auto;
+      margin-left: 1rem;
+    }
+  }
 }
