--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import './utilities/variable';
+@import './utilities/animations';
 @import './utilities/fonts';
 @import './layout';
 @import './styles.scss';
