--- a/src/styles/mixin/mixin.scss
+++ b/src/styles/mixin/mixin.scss
@@ -22,4 +22,12 @@
   background: $main-color;
   border: 1px solid $font-color;
   max-width: 6rem;
-} ;
+}
+
+@mixin triangle($borderThickness, $borderSide, $color) {
+  width: 0;
+  height: 0;
+  border-left: $borderThickness solid transparent;
+  border-right: $borderThickness solid transparent;
+  #{$borderSide}: $borderThickness solid $color;
+}
