Added some text, typewriter and some gamelogic

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -59,6 +59,9 @@ header {
     .btn-dark {
       margin: 0;
       margin-bottom: auto;
+      img {
+        padding: 0.2rem;
+      }
     }
   }
   .playboard {
