--- a/src/styles/components-style/playboard.scss
+++ b/src/styles/components-style/playboard.scss
@@ -1,6 +1,55 @@
 @import '../utilities/variable';
+@import '../utilities/animations';
 .playboard {
   background-color: $main-color;
   border: 1px solid white;
   border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  .text-container {
+    flex-grow: 1;
+    padding: 2rem;
+    display: flex;
+    .line {
+      display: inline;
+      animation: blink 0.6s steps(100, end) infinite;
+    }
+  }
+  button[disabled] {
+    display: none;
+  }
+  button:enabled {
+    animation: blink 1s ease;
+    width: 33%;
+    margin-left: auto;
+    margin-right: 0.9rem;
+    background: $Btn-color;
+    border: none;
+    border-radius: 20px;
+  }
+  .btn-continue {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 20px;
+  }
+  .btn-options {
+    display: flex;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    button {
+      border: 2px solid black;
+      padding: 10px 3px 10px 3px;
+    }
+  }
+
+  .radio-container {
+    display: flex;
+    label {
+      margin: auto auto 20px auto;
+    }
+    input[type='radio'] {
+      position: absolute;
+      display: none;
+    }
+  }
 }
