updated prettier format

--- a/src/styles/components-style/onboarding.scss
+++ b/src/styles/components-style/onboarding.scss
@@ -1,5 +1,5 @@
-@import '../utilities/variable';
-@import '../mixin/mixin.scss';
+@import "../utilities/variable";
+@import "../mixin/mixin.scss";
 h4 {
   margin: 4rem 0 2rem 0;
 }
