--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,8 @@
-@import './utilities/variable';
-@import './utilities/animations';
-@import './utilities/fonts';
-@import './layout';
-@import './styles.scss';
+@import "./utilities/variable";
+@import "./utilities/animations";
+@import "./utilities/fonts";
+@import "./layout";
+@import "./styles.scss";
 
 body {
   color: $font-color;
