--- a/src/styles/utilities/_fonts.scss
+++ b/src/styles/utilities/_fonts.scss
@@ -1,14 +1,14 @@
 @font-face {
   font-family: Sen;
-  @import url('https://fonts.googleapis.com/css2?family=Sen&display=swap');
+  @import url("https://fonts.googleapis.com/css2?family=Sen&display=swap");
 }
 @font-face {
   font-family: Ubuntu;
-  @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+  @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 }
 @font-face {
   font-family: Roboto;
-  @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+  @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 }
 
 .caption {
